5.Services.Ingress/ingress-demo.tocompare/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mjbright-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: default
spec:
  rules:
  - host: quiz.mjbright.click
    http:
      paths:
      - backend:
          service:
            name: quiz
            port:
              number: 32000
        path: /
        pathType: ImplementationSpecific
  - host: vote.mjbright.click
    http:
      paths:
      - backend:
          service:
            name: vote
            port:
              number: 32000
        path: /
        pathType: ImplementationSpecific
  - host: web.mjbright.click
    http:
      paths:
      - backend:
          service:
            #name: web
            name: nginx
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
